# MIGI

./: .gitignore  .gitmodules  README.md
Plugins/MIGI/: MIGI.uplugin  README.md
Plugins/MIGI/Shaders/: NNInterface.usf
Plugins/MIGI/Shaders/Private/: MIGISimpleDiffuseRayTracing.usf  NNInterface.usf
Plugins/MIGI/Source/MIGI/: MIGI.Build.cs
Plugins/MIGI/Source/MIGI/Private/: CUDAHelper.h  MIGICUDAAdapter.cpp  MIGICUDAAdapter.h  MIGIConfig.cpp  MIGIConfig.h  MIGIConstants.h  MIGIDiffuseIndirect.cpp  MIGIDiffuseIndirect.h  MIGIIndirectRender.cpp  MIGILogCategory.cpp  MIGILogCategory.h  MIGIML.cpp  MIGIML.h  MIGIModule.cpp  MIGINNAdapter.cpp  MIGINNAdapter.h  MIGIPT.cpp  MIGIPT.h  MIGIPathTracingCVar_Hack.cpp  MIGIPathTracingCVar_Hack.h  MIGIRendering.h  MIGIRenderingContext.cpp  MIGIShaders.h  MIGISyncAdapter.cpp  MIGISyncAdapter.h  MIGISyncUtils.cpp  MIGISyncUtils.h  MIGIViewExtension.cpp  MIGIViewExtension.h  MIGIViewUniformBufferExtension.cpp  MIGIViewUniformBufferExtension.h
Plugins/MIGI/Source/MIGI/Private/Adapter/: MIGICUDAAdapterD3D12.cpp  MIGICUDAAdapterD3D12.h  MIGINNAdapterD3D12.cpp  MIGINNAdapterD3D12.h
Plugins/MIGI/Source/MIGI/Private/Adapters/: MIGINNAdapterD3D12.cpp  MIGINNAdapterD3D12.h
Plugins/MIGI/Source/MIGI/Private/CUDA/: test.cu
Plugins/MIGI/Source/MIGI/Private/Shaders/: MIGINNInputShaderCS.cpp  MIGINNOutputShaderCS.cpp
Plugins/MIGI/Source/MIGI/Private/Vulkan/: MIGICUDAAdapterD3D12.cpp  MIGICUDAAdapterD3D12.h  MIGICUDAAdapterVulkan.cpp  MIGICUDAAdapterVulkan.h  MIGISyncAdapterD3D12.cpp  MIGISyncAdapterD3D12.h  MIGISyncAdapterVulkan.cpp  MIGISyncAdapterVulkan.h  MIGISyncUtilsVulkan.cpp  MIGISyncUtilsVulkan.h
Plugins/MIGI/Source/MIGI/Public/: MIGIModule.h
Plugins/MIGI/Source/MIGINN/: CMakeLists.txt  MIGINN.Build.cs
Plugins/MIGI/Source/MIGINN/include/: MIGINN.h
Plugins/MIGI/Source/MIGINN/src/: MIGINN.cu  MIGINNCUDAHelper.cuh  MIGINNInternal.cuh  MIGINN_MLP.cu  main.cu
